--- a/2018-06-27_SpotCheckBug_349936/SQL_StickyNav_1_M.html
+++ b/2018-06-27_SpotCheckBug_349936/SQL_StickyNav_1_M.html
@@ -7,8 +7,9 @@
             <div class="ms-row no-margin">
                 <div class="livearea tabs" data-tab-number="{{tab-number}}">
                     <div class="tab main-tab">
-                        <!-- in mobile this is one item and looks sort of like an accordian -->
-                        <button id="stickyMobilePageLink" class="tab-menu" tabindex="0" aria-live="assertive" aria-expanded="false" aria-haspopup="true" aria-label="Open quick links menu - Collapsed" aria-controls="quicklinks" aria-owns="quicklinks" style="background-color : transparent;">
+                        <!-- in mobile this is one item and looks sort of like an accordian aria-label="quick links navigation"  -->
+                        <button id="stickyMobilePageLink" class="tab-menu" tabindex="0" aria-live="assertive" aria-expanded="false" aria-haspopup="true"
+                            aria-controls="quicklinks" aria-owns="quicklinks" style="background-color : transparent;">
                             <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav1">
                                 {{1:tab-name}}
                             </mscom:conditional>
@@ -30,64 +31,79 @@
                             <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav7">
                                 {{7:tab-name}}
                             </mscom:conditional>
+                            <span class="visually-hidden" aria-live="assertive">navigation collapsed</span>
                         </button>
                     </div>
-                    <nav id="quicklinks" role="menubar" aria-label="{{aria-label-info}}" aria-hidden="false">
-                        <ul role="menu">
+                    <nav id="quicklinks" aria-label="{{aria-label-info}}" aria-hidden="false">
+                        <ul>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav1">
-                                    <mscom:link text="{{1:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{1:tab-link}}" href="{{1:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{1:tab-ms.ea_action}}','ms.ea_offer':'{{1:tab-ms.ea_offer}}','aria-label':'{{1:tab-aria-label}}'}, 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{1:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{1:tab-link}}"
+                                        href="{{1:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{1:tab-ms.ea_action}}','ms.ea_offer':'{{1:tab-ms.ea_offer}}','aria-label':'{{1:tab-aria-label}}'}, 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav1">
-                                    <mscom:link text="{{1:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{1:tab-link}}" href="{{1:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{1:tab-ms.ea_action}}','ms.ea_offer':'{{1:tab-ms.ea_offer}}','aria-label':'{{1:tab-aria-label}}','tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{1:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{1:tab-link}}"
+                                        href="{{1:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{1:tab-ms.ea_action}}','ms.ea_offer':'{{1:tab-ms.ea_offer}}','aria-label':'{{1:tab-aria-label}}','tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav2">
-                                <mscom:link text="{{2:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{2:tab-link}}" href="{{2:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{2:tab-ms.ea_action}}','ms.ea_offer':'{{2:tab-ms.ea_offer}}','aria-label':'{{2:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{2:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{2:tab-link}}"
+                                        href="{{2:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{2:tab-ms.ea_action}}','ms.ea_offer':'{{2:tab-ms.ea_offer}}','aria-label':'{{2:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav2">
-                                <mscom:link text="{{2:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{2:tab-link}}" href="{{2:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{2:tab-ms.ea_action}}','ms.ea_offer':'{{2:tab-ms.ea_offer}}','aria-label':'{{2:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{2:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{2:tab-link}}"
+                                        href="{{2:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{2:tab-ms.ea_action}}','ms.ea_offer':'{{2:tab-ms.ea_offer}}','aria-label':'{{2:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav3">
-                                <mscom:link text="{{3:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{3:tab-link}}" href="{{3:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{3:tab-ms.ea_action}}','ms.ea_offer':'{{3:tab-ms.ea_offer}}','aria-label':'{{3:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{3:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{3:tab-link}}"
+                                        href="{{3:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{3:tab-ms.ea_action}}','ms.ea_offer':'{{3:tab-ms.ea_offer}}','aria-label':'{{3:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav3">
-                                <mscom:link text="{{3:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{3:tab-link}}" href="{{3:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{3:tab-ms.ea_action}}','ms.ea_offer':'{{3:tab-ms.ea_offer}}','aria-label':'{{3:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{3:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{3:tab-link}}"
+                                        href="{{3:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{3:tab-ms.ea_action}}','ms.ea_offer':'{{3:tab-ms.ea_offer}}','aria-label':'{{3:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav4">
-                                <mscom:link text="{{4:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{4:tab-link}}" href="{{4:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{4:tab-ms.ea_action}}','ms.ea_offer':'{{4:tab-ms.ea_offer}}','aria-label':'{{4:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{4:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{4:tab-link}}"
+                                        href="{{4:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{4:tab-ms.ea_action}}','ms.ea_offer':'{{4:tab-ms.ea_offer}}','aria-label':'{{4:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav4">
-                                <mscom:link text="{{4:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{4:tab-link}}" href="{{4:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{4:tab-ms.ea_action}}','ms.ea_offer':'{{4:tab-ms.ea_offer}}','aria-label':'{{4:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{4:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{4:tab-link}}"
+                                        href="{{4:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{4:tab-ms.ea_action}}','ms.ea_offer':'{{4:tab-ms.ea_offer}}','aria-label':'{{4:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav5">
-                                <mscom:link text="{{5:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{5:tab-link}}" href="{{5:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{5:tab-ms.ea_action}}','ms.ea_offer':'{{5:tab-ms.ea_offer}}','aria-label':'{{5:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{5:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{5:tab-link}}"
+                                        href="{{5:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{5:tab-ms.ea_action}}','ms.ea_offer':'{{5:tab-ms.ea_offer}}','aria-label':'{{5:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav5">
-                                <mscom:link text="{{5:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{5:tab-link}}" href="{{5:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{5:tab-ms.ea_action}}','ms.ea_offer':'{{5:tab-ms.ea_offer}}','aria-label':'{{5:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{5:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{5:tab-link}}"
+                                        href="{{5:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{5:tab-ms.ea_action}}','ms.ea_offer':'{{5:tab-ms.ea_offer}}','aria-label':'{{5:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav6">
-                                <mscom:link text="{{6:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{6:tab-link}}" href="{{6:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{6:tab-ms.ea_action}}','ms.ea_offer':'{{6:tab-ms.ea_offer}}','aria-label':'{{6:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{6:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{6:tab-link}}"
+                                        href="{{6:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{6:tab-ms.ea_action}}','ms.ea_offer':'{{6:tab-ms.ea_offer}}','aria-label':'{{6:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav6">
-                                <mscom:link text="{{6:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{6:tab-link}}" href="{{6:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{6:tab-ms.ea_action}}','ms.ea_offer':'{{6:tab-ms.ea_offer}}','aria-label':'{{6:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{6:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{6:tab-link}}"
+                                        href="{{6:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{6:tab-ms.ea_action}}','ms.ea_offer':'{{6:tab-ms.ea_offer}}','aria-label':'{{6:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                             <li class="tab">
                                 <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav7">
-                                <mscom:link text="{{7:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{7:tab-link}}" href="{{7:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{7:tab-ms.ea_action}}','ms.ea_offer':'{{7:tab-ms.ea_offer}}','aria-label':'{{7:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{7:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{7:tab-link}}"
+                                        href="{{7:tab-link-external-url}}" htmlcustomattributes="{'data-active':'true', 'aria-current':'page', 'ms.ea_action':'{{7:tab-ms.ea_action}}','ms.ea_offer':'{{7:tab-ms.ea_offer}}','aria-label':'{{7:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                                 <mscom:conditional propertyexists="false" property="PageProperties.ActiveStickyNav7">
-                                <mscom:link text="{{7:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{7:tab-link}}" href="{{7:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{7:tab-ms.ea_action}}','ms.ea_offer':'{{7:tab-ms.ea_offer}}','aria-label':'{{7:tab-aria-label}}', 'tabindex':'0', 'role':'menuitem'}"></mscom:link>
+                                    <mscom:link text="{{7:tab-name}}" controltheme="default" disablebitracking="false" classoverride="tab-menu" md:Payloadguid="{{7:tab-link}}"
+                                        href="{{7:tab-link-external-url}}" htmlcustomattributes="{'data-active':'false' , 'ms.ea_action':'{{7:tab-ms.ea_action}}','ms.ea_offer':'{{7:tab-ms.ea_offer}}','aria-label':'{{7:tab-aria-label}}', 'tabindex':'0'}"></mscom:link>
                                 </mscom:conditional>
                             </li>
                         </ul>
