--- a/2018-06-27_SpotCheckBug_349936/SQL_StickyNav_1_M.html
+++ b/2018-06-27_SpotCheckBug_349936/SQL_StickyNav_1_M.html
@@ -8,7 +8,7 @@
                 <div class="livearea tabs" data-tab-number="{{tab-number}}">
                     <div class="tab main-tab">
                         <!-- in mobile this is one item and looks sort of like an accordian aria-label="quick links navigation"  -->
-                        <button id="stickyMobilePageLink" class="tab-menu" tabindex="0" aria-live="assertive" aria-expanded="false" aria-haspopup="true"
+                        <button id="stickyMobilePageLink" class="tab-menu" tabindex="0" role="alert" aria-live="assertive" aria-expanded="false" aria-haspopup="true"
                             aria-controls="quicklinks" aria-owns="quicklinks" style="background-color : transparent;">
                             <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav1">
                                 {{1:tab-name}}
